--- a/Quotum/index.css
+++ b/Quotum/index.css
@@ -1,23 +1,99 @@
+html {
+    background-image: linear-gradient(to top right, rgb(196 239 255), rgb(255 0 0 / 47%));
+    box-sizing: border-box;
+    height: 100vh;
+}
+body {
+    margin-left: -2px;
+    
+    height: 100%;
+    font-size: 1.2rem;
+}
+h1 {
+    font-size: 3rem;
+    margin: -10px;
+}
+nav .first_of_kind {
+    margin-left: -10px;
+}
+.nab_links {
+    font-size: 2rem;
+}
 ul {
     list-style-type: none;
     display: inline-flex;
-    align-items: center;
+    align-items: baseline;
     margin: auto;
-    justify-content: space-between;
+    justify-content: space-around;
     width: 100%;
+    padding-left: 0%;
 }
 .content {
     display: flex;
     flex-direction: row;
     width: 100%;
+    height: 100%;
+    align-content: stretch;
 }
 .first_of_kind {
     align-items: flex-start;
+    margin-right: 30px;
+    justify-content: space-between;
 }
 .bars {
-    border-color: black;
+    margin: 0px 0px 20px 0px;
+    border: solid;
+    border-width: 5px 0px;
+    border-color: chocolate;
+    padding-left: 15px;
     background-color: antiquewhite;
+    border-image-slice: 1;
+    overflow: hidden;
+    border-image-source: linear-gradient(to top right, #ffffff, #000000)
 }
 img {
-    max-width: 200px;
+    max-height: 200px;
+    box-shadow: rgb(0 0 0 / 50%) 0px 8px 14px;
+}
+h2 {
+    margin: 5px;
+}
+article {
+    margin-right: 20px;
+}
+.gallery {
+    background-color: aliceblue;
+    border-radius: 25px;
+    padding: 5px 0px;
+    height: 250px;
+    width: 250px;
+    overflow: hidden;
+    position: relative;
+    box-shadow: rgb(0 0 0 / 50%) 1px 5px 9px 3px
+}
+li p {
+    position: relative;
+    z-index: 5;
+    margin: 1px;
+    padding-bottom: 9px;
+    font-size: 1.3rem;
+    background-color: aliceblue;
+    box-shadow:  0px 6px 5px #0000008a;
+}
+
+.gallery img {
+    margin: 0px;
+    position: absolute;
+    top: 40px;
+    max-height: 220px;
+    box-shadow: rgb(0 0 0 / 50%) 0px 8px 14px inset;
+    object-position: -15px ;
+    z-index: 3;
+}
+.gallery p {
+    text-align: center;
+  
+}
+.gallery #dragon {
+    object-position: -60px;
 }
